--- a/css/index.css
+++ b/css/index.css
@@ -128,26 +128,24 @@ input[type="radio"].visually-hidden {
 .button::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 16px;
   left: 0;
   z-index: -1;
 
   width: 100%;
-  height: 40px;
+  height: 8px;
 
   background-color: rgb(240, 197, 46);
-  transform: rotateX(75deg);
-}
-
-.button:hover::before {
-  transform: rotateX(-75deg);
 
   transition: all 0.4s ease;
 }
 
-.button:active {
-  color: rgba(0, 0, 0, 0.3);
+.button:hover::before {
+  top: 0;
+
+  height: 40px;
 }
+
 
 .header-main {
   margin-top: 40px;
@@ -182,12 +180,6 @@ input[type="radio"].visually-hidden {
 
 .header-main-logo:active {
   opacity: 0.3;
-}
-
-.services-button:active {
-  color: rgb(247, 225, 132);
-
-  background-color: rgb(0, 0, 0);
 }
 
 .navigation-wrapper {
@@ -739,13 +731,13 @@ input[type="radio"].visually-hidden {
   padding: 0;
 }
 
-.services-button--active {
+.services-control--current .button {
   color: rgb(247, 225, 132);
 
   background-color: rgb(0, 0, 0);
 }
 
-.services-button--active::before {
+.services-control--current .button::before {
   background-color: transparent;
 }
 
@@ -1471,7 +1463,8 @@ input[type="radio"].visually-hidden {
 }
 
 .catalog-item-hover .button {
-  margin-top: 15px;
+  margin-top: 48px;
+  margin-bottom: 12px;
 }
 
 .catalog-item-hover a:not([class="button"]) {
