--- a/css/index.css
+++ b/css/index.css
@@ -493,7 +493,6 @@ input[type="radio"].visually-hidden {
   order: 2;
 }
 
-
 .carousel-list b {
   font-weight: 800;
   font-size: 47px;
@@ -540,13 +539,50 @@ input[type="radio"].visually-hidden {
 
 .carousel-controls {
   position: absolute;
-  top: 214px;
   right: 80px;
+  bottom: 255px;
+  z-index: 1;
 
+  display: inline-block;
   margin: 0;
   padding: 0;
 
   list-style: none;
+}
+
+.carousel-controls li {
+  display: inline-block;
+}
+
+.carousel-controls li:not(:last-child) {
+  margin-right: 20px;
+} 
+
+.carousel-button {
+  position: relative;
+
+  width: 12px;
+  height: 12px;
+  padding: 0;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 50%;
+}
+
+.carousel-button--current::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+
+  width: 4px;
+  height: 4px;
+
+  border: 1px solid black;
+  border-radius: 50%;
 }
 
 .categories {
