--- a/css/index.css
+++ b/css/index.css
@@ -556,7 +556,7 @@ input[type="radio"].visually-hidden {
 
 .carousel-controls li:not(:last-child) {
   margin-right: 20px;
-} 
+}
 
 .carousel-button {
   position: relative;
@@ -1335,6 +1335,26 @@ input[type="radio"].visually-hidden {
   position: relative;
 
   padding-left: 40px;
+}
+
+.filter-item:focus > label,
+.filter-item label:hover {
+  outline: inherit;
+  outline-color: blueviolet;
+}
+
+.filter-item:hover .checkbox-indicator {
+  opacity: 0.6;
+}
+
+.filter-item input:disabled + .checkbox-indicator,
+.filter-item input:disabled + .checkbox-indicator + .filter-item-text {
+  opacity: 0.25;
+}
+
+.filter-item input[type="checkbox"]:focus + .checkbox-indicator,
+.filter-item input[type="radio"]:focus + .radio-indicator {
+  outline: 10px auto -webkit-focus-ring-color;
 }
 
 .filter-item input[type="checkbox"] + .checkbox-indicator {
