--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,8 @@ input[type="radio"].visually-hidden {
 }
 
 .search-form-button:active {
+  display: block;
+
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -1170,6 +1172,7 @@ input[type="radio"].visually-hidden {
   top: 50%;
   left: 50%;
   z-index: 5;
+
 /*display: block;*/
 
   display: none;
@@ -1259,6 +1262,7 @@ input[type="radio"].visually-hidden {
   left: 50%;
   z-index: 5;
 
+  display: none;
   width: 960px;
   height: 559px;
 
@@ -1266,9 +1270,6 @@ input[type="radio"].visually-hidden {
   box-shadow: 0 10px 20px 0 rgba(4, 6, 6, 0.2);
   transform: translate(-50%, -50%);
 }
-
-
-
 
 .modal-button {
   content: "";
